---
title: screen_candidate — Screen a candidate
---
stateDiagram-v2
	direction LR

	classDef swimlane_recruiter fill:#e0f2fe,stroke:#0284c7,color:#0c4a6e,stroke-width:1px
	classDef swimlane_reviewer fill:#fef3c7,stroke:#d97706,color:#78350f,stroke-width:1px
	classDef terminal_success fill:#dcfce7,stroke:#16a34a,color:#14532d,stroke-width:2px

	[*] --> intake
	review --> done : ● approve (P0)
	intake --> review : ● submit (P0)
	intake --> compensation_review : ┄ submit [context.salary_above_band] (P5)
	done --> [*]

	note right of review
		72h SLA
	end note

	class compensation_review swimlane_reviewer
	class intake swimlane_recruiter
	class review swimlane_reviewer
	class done terminal_success
